--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <title>Option</title>
+    <title>Option Select</title>
   </head>
   <body style="background-color: #1d1d1f">
     <noscript>
